@@ -385,9 +385,10 @@ public class RequestQueryParams extends ArrayList<RequestQueryParam> {
 	 *
 	 * @param name The parameter name.
 	 * @return The list of all parameters with the specified name, or an empty list if none are found.
+	 * 	<br>List is unmodifiable.
 	 */
 	public List<RequestQueryParam> getAll(String name) {
-		return stream(name).collect(toList());
+		return stream(name).toList();
 	}
 
 	/**
@@ -425,8 +426,9 @@ public class RequestQueryParams extends ArrayList<RequestQueryParam> {
 	/**
 	 * Returns all the unique header names in this list.
 	 * @return The list of all unique header names in this list.
+	 * 	<br>List is unmodifiable.
 	 */
-	public List<String> getNames() { return stream().map(RequestQueryParam::getName).map(x -> caseSensitive ? x : x.toLowerCase()).distinct().collect(toList()); }
+	public List<String> getNames() { return stream().map(RequestQueryParam::getName).map(x -> caseSensitive ? x : x.toLowerCase()).distinct().toList(); }
 
 	/**
 	 * Locates the position/limit query arguments ({@code &amp;p=}, {@code &amp;l=}) in the query string and returns them as a {@link PageArgs} object.
